# MMM-Figshare-eCommerce

./: .gitignore  .pytensorrc  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  activate_mmm.ps1  constitution.md  environment.yml  github_version.py  pyproject.toml  upload_mermaid.js
.agent/rules/: agentic--code-migration.md  agentic--code-review.md  agentic--refactor.md  error-handling.md
.agent/workflows/: clean-code-audit.md
app/: Home.py  __init__.py  dashboard.py  mlflow_loader.py  shared.py
app/.streamlit/: config.toml
app/components/: __init__.py  alerts.py  (+3 more)
docs/: analysis_index.md  architecture.mermaid  data_dictionary.md  eda_findings.md  mathematical_proof.md  model_architecture.md  module_scopes.md  reading_roadmap.md  repository_map.md  technical_context.md
notebooks/: 01_eda.ipynb  02_preprocessing.ipynb  03_mmm_baseline.ipynb  04_hierarchical.ipynb  05_optimization.ipynb
scripts/: diagnose_territory.py  generate_deliverables.py  mmm_baseline.py  mmm_hierarchical.py  regenerate_deliverables.py  run_pipeline.py  verify_latest_run.py
src/: audit.py  baseline_evaluation.py  comparison.py  config.py  data_loader.py  deliverables.py  evaluation.py  feature_engineering.py  insights.py  model.py  model_hierarchical_custom.py  model_insights.py  optimization.py  pipeline.py  preprocessing.py  project_pricing.py  schemas.py  transformations.py  validation.py  value_estimation.py
tests/: test_adstock_dimensions.py  test_contribution_math.py  test_data_loader.py  test_horseshoe_tau.py  test_marginal_roas.py  test_model.py  test_model_insights.py  test_optimization.py  test_preprocessing.py  test_roi.py
(+46 files in other folders)
