[project]
name = "mmm-figshare-ecommerce"
version = "0.1.0"
description = "Bayesian Marketing Mix Modeling for Multi-Region eCommerce"
readme = "README.md"
requires-python = ">=3.10,<3.12"
authors = [
    { name = "Jordão Fernandes de Andrade", email = "jordaoandrade@gmail.com" }
]
keywords = ["mmm", "marketing-mix-modeling", "bayesian", "pymc", "ecommerce"]

# NOTE: Dependencies are managed via Conda (environment.yml)
# This file is kept for metadata and compatibility with pip-based tools

dependencies = [
    # Core MMM
    "pymc>=5.10.0",
    "pymc-marketing>=0.4.0",
    "arviz>=0.17.0",
    # Experiment Tracking
    "mlflow>=2.10.0",
    # Data
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "openpyxl>=3.1.0",
    "pyarrow>=14.0.0",
    "fastparquet>=2023.10.0",
    # ML
    "scikit-learn>=1.3.0",
    "scikit-optimize>=0.10.0",
    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
    "missingno>=0.5.0",
    # Time Series
    "statsmodels>=0.14.0",
    "holidays>=0.40",
    # Notebooks
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    # Acceleration
    "jax==0.4.23",
    "jaxlib==0.4.23",
    "numpyro==0.13.2",
]

dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

# Tell hatchling this is not a package (analysis project)
[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
